--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
         <div class="container-xxl row m-auto">
             <div class="col mb-3 mt-3 px-1">
                 <div class="d-flex align-items-center">
-                    <a href="https://florianwns.github.io/z5omes/"
+                    <a href="https://OrangeJuce82.github.io/z5omes/"
                        class="text-decoration-none me-auto d-flex align-items-center position-relative">
                         <img src="img/logo_zome.svg" width="46" title="Z5omes" class="me-2">
                         <h2 id="#title" class="text-primary mb-0 ">
@@ -449,7 +449,7 @@
                         <i class="fa-brands fa-youtube"></i>
                     </a>
 
-                    <a href="https://github.com/florianwns/z5omes"
+                    <a href="https://github.com/OrangeJuce82/z5omes"
                        class="text-primary btn btn-sm fs-4 p-2"
                        data-bs-toggle="tooltip" :title="i18n('tooltip_link_github')">
                         <i class="fa-brands fa-github"></i>
@@ -460,7 +460,7 @@
                         <i class="fa-brands fa-linkedin"></i>
                     </a>
 
-                    <a href="https://github.com/florianwns/z5omes/wiki"
+                    <a href="https://github.com/OrangeJuce82/z5omes/wiki"
                        class="text-primary btn btn-sm fs-4 p-2  me-4"
                        data-bs-toggle="tooltip" :title="i18n('tooltip_link_wiki')">
                         <i class="fa-brands fa-wikipedia-w"></i>
