--- a/index.html
+++ b/index.html
@@ -449,18 +449,13 @@
                         <i class="fa-brands fa-youtube"></i>
                     </a>
 
-                    <a href="https://github.com/florianwns/z5omes"
+                    <a href="https://github.com/orangejuce82/z5omes"
                        class="text-primary btn btn-sm fs-4 p-2"
                        data-bs-toggle="tooltip" :title="i18n('tooltip_link_github')">
                         <i class="fa-brands fa-github"></i>
                     </a>
-                    <a href="https://www.linkedin.com/in/florian-rey-346857185/"
-                       class="text-primary btn btn-sm fs-4 p-2"
-                       data-bs-toggle="tooltip" :title="i18n('tooltip_link_linkedin')">
-                        <i class="fa-brands fa-linkedin"></i>
-                    </a>
-
-                    <a href="https://github.com/florianwns/z5omes/wiki"
+                    
+                    <a href="https://github.com/orangejuce82/z5omes/wiki"
                        class="text-primary btn btn-sm fs-4 p-2  me-4"
                        data-bs-toggle="tooltip" :title="i18n('tooltip_link_wiki')">
                         <i class="fa-brands fa-wikipedia-w"></i>
