--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
         <div class="container-xxl row m-auto">
             <div class="col mb-3 mt-3 px-1">
                 <div class="d-flex align-items-center">
-                    <a href="https://florianwns.github.io/z5omes/"
+                    <a href="https://orangejuce82.github.io/z5omes/"
                        class="text-decoration-none me-auto d-flex align-items-center position-relative">
                         <img src="img/logo_zome.svg" width="46" title="Z5omes" class="me-2">
                         <h2 id="#title" class="text-primary mb-0 ">
